--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.70.1",
     "react-native-gesture-handler": "^2.6.1",
     "react-native-reanimated": "^2.10.0",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-swipe-gestures": "^1.0.5"
