--- a/package.json
+++ b/package.json
@@ -11,16 +11,27 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.7",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.0",
+    "@react-navigation/native": "^5.7.4",
+    "@react-navigation/stack": "^5.9.1",
+    "@types/react-native-video": "^5.0.14",
+    "@types/react-native-video-player": "^0.10.3",
+    "add": "^2.0.6",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-gesture-handler": "^2.6.1",
+    "react-native-pager-view": "^6.0.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
-    "react-native-swipe-gestures": "^1.0.5"
+    "react-native-shared-element": "^0.8.4",
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-swipe-gestures-plus": "^1.1.3",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1",
+    "react-native-video-player": "^0.14.0",
+    "react-navigation-shared-element": "^3.1.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
