--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-native-video": "^5.0.14",
     "@types/react-native-video-player": "^0.10.3",
     "add": "^2.0.6",
+    "moti": "^0.20.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-gesture-handler": "^2.6.1",
