--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
+    "@shopify/react-native-skia": "^0.1.156",
     "@types/react-native-video": "^5.0.14",
     "@types/react-native-video-player": "^0.10.3",
     "add": "^2.0.6",
     "moti": "^0.20.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.6.1",
     "react-native-pager-view": "^6.0.0",
     "react-native-reanimated": "^2.10.0",
